--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="referrer" content="no-referrer" />
         <title></title>
-        <link rel="shortcut icon" href="./img/net.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
         <style>
             body{
                 margin:0;
