--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,10 @@
         <title></title>
         <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
         <style>
-            body{
-                margin:0;
-                padding:0;
-            }
+            body{margin:0;padding:0;}
         </style>
     </head>
-    <body>       
-        <div id="app">
-            
-        </div>             
+    <body>
+        <div id="app"></div>
     </body>
 </html>
