--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <title></title>
         <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
         <style>
-            body{margin:0;padding:0;}
+            body{margin:0;padding:0;width:100%;height:100%}
         </style>
     </head>
     <body>
