--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="referrer" content="no-referrer" />
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
         <title></title>
         <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
         <style>
