--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,8 @@
         <meta charset="UTF-8">
         <meta name="referrer" content="no-referrer" />
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-        <title></title>
+        <title>哔哩哔哩 (゜-゜)つロ 干杯~-bilibili</title>
         <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
-        <style>
-            body{margin:0;padding:0;width:100%;height:100%}
-        </style>
     </head>
     <body>
         <div id="app"></div>
