--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="referrer" content="no-referrer" />
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-        <title>哔哩哔哩 (゜-゜)つロ 干杯~-bilibili</title>
+        <title>Jane's book</title>
         <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
     </head>
     <body>
