--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta name="referrer" content="no-referrer" />
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
         <title>Jane's book</title>
-        <link rel="shortcut icon" href="https://www.bilibili.com/favicon.ico" type="image/x-icon">
+        <link href="//cdn2.jianshu.io/assets/favicons/favicon-e743bfb1821442341c3ab15bdbe804f7ad97676bd07a770ccc9483473aa76f06.ico" rel="shortcut icon" type="image/x-icon">
     </head>
     <body>
         <div id="app"></div>
